Fix footer styles for text alignment and background

--- a/style.css
+++ b/style.css
@@ -148,7 +148,8 @@ border-radius:10px;
 footer{
 
 padding:40px;
-text-align:center;ackground:#020617;
+text-align:center;
+background:#020617;
 
 }
 
